# EverFit

./: .clang-format  .gitignore  CMakeLists.txt  README.md
preprocessor/: CMakeLists.txt  preprocessor.cpp
scripts/: reformat.sh  run_all_tests.sh
test/: CMakeLists.txt  code_stream.cpp  macro_define.cpp  test_common.hpp  test_compare.sh  test_simple_replace.cpp.expected  test_simple_replace.cpp.in
